.config/kubernetes/renderred/environments-default/kubearmor/MutatingWebhookConfiguration/kubearmor-controller-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/managed-by: Helmraiser
    app.tanka.grafana.com: kubearmor
  name: kubearmor-controller-mutating-webhook-configuration
  namespace: kubearmor
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLVENDQWhHZ0F3SUJBZ0lRVmlXbUFSU0M4ZHJ3U1Y0bEtNZmU4akFOQmdrcWhraUc5dzBCQVFzRkFEQWYKTVIwd0d3WURWUVFERXhScmRXSmxZWEp0YjNJdFkyOXVkSEp2Ykd4bGNqQWVGdzB5TmpBNE1qSXlNVEV5TURsYQpGdzB5T1RBNE1qRXlNVEV5TURsYU1COHhIVEFiQmdOVkJBTVRGR3QxWW1WaGNtMXZjaTFqYjI1MGNtOXNiR1Z5Ck1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBbWIyanpkMGo3bXQwSnYzSmVBUHEKKzNEKzZybE41UC8yU1lNZ3oyRlZGQnRXMStqSDhtQ2VJTzBNaTZJWi91N08vb2FVWTRDWEZaeWpCVU4zWnR4TgpSZFBaSnlYNEtnWH [...]
    service:
      name: kubearmor-controller-webhook-service
      namespace: kubearmor
      path: /mutate-pods
  failurePolicy: Ignore
  name: annotation.kubearmor.com
  objectSelector:
    matchExpressions:
    - key: kubearmor-app
      operator: DoesNotExist
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
    - pods/binding
    scope: '*'
  sideEffects: NoneOnDryRun
